--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,9 @@
 <html ng-app="DR">
   <head>
     <meta charset="UTF-8">
-    <title>DR</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width">
+    <title>It's a DR-downloader!</title>
     <link href="//cdnjs.cloudflare.com/ajax/libs/foundation/5.0.2/css/normalize.min.css" rel="stylesheet">
     <link href="//cdnjs.cloudflare.com/ajax/libs/foundation/5.0.2/css/foundation.min.css" rel="stylesheet">
     <style>
