--- a/public/index.html
+++ b/public/index.html
@@ -21,48 +21,7 @@
           <h5 class="subheader">It's a DR command-line downloader!</h5>
         </div>
 
-        <section ng-controller="SearchCtrl">
-          <form ng-submit="search()">
-            <p>
-              <input type="text" ng-model="q" initial-focus select-all-on-focus>
-            </p>
-          </form>
-
-          <div ng-show="uri">
-            <textarea rows=6 select-all-on-focus>ffmpeg -i "{{ uri }}" -c copy -absf aac_adtstoasc {{ filename }}.mp4</textarea>
-          </div>
-
-          <p class="right" ng-show="loading">
-            <img src="http://media.giphy.com/media/dIw6T67vqxfCo/giphy.gif" alt="">
-          </p>
-
-          <ul>
-            <li ng-repeat="result in results">
-              <a href="" ng-click="loadProgramsFor(result)">{{ result.Title }}</a>
-              <ul ng-show="result.programs">
-                <li ng-repeat="program in result.programs">
-                  <a href="{{ program.Uri }}" ng-show="program.video" ng-click="play(program, $event)">{{ program.Title }}</a>
-                  <span ng-hide="program.video">{{ program.Title }}</span>
-                </li>
-              </ul>
-            </li>
-          </ul>
-
-          <br>
-          <br>
-
-          <hr>
-
-          <br>
-          <br>
-
-          <h4>WUT? I don't even?</h4>
-          <h5>You have a Mac:</h5>
-          <ul>
-            <li>Get <a href="http://brew.sh">homebrew</a></li>
-            <li><pre>$ brew install ffmpeg</pre></li>
-          </ul>
-        </section>
+        <section ng-view></section>
 
         <br>
         <br>
@@ -80,8 +39,9 @@
         <br>
       </div>
     </div>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.5/angular.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular-route.min.js"></script>
     <script src="/application.js"></script>
   </body>
 </html>
