--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="DR">
+<html ng-app="dldr">
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -12,7 +12,7 @@
       textarea { height: auto; font-family: monospace; }
     </style>
   </head>
-  <body>
+  <body ng-controller='SearchCtrl'>
     <div class="row">
       <div class="large-8 columns large-centered">
         <br><br>
@@ -21,7 +21,46 @@
           <h5 class="subheader">It's a DR command-line downloader!</h5>
         </div>
 
-        <section ng-view></section>
+        <form>
+          <p>
+            <input type="text" ng-model="q" autofocus>
+          </p>
+        </form>
+
+        <div ng-show="file">
+          <textarea rows=6 select-all-on-focus>ffmpeg -i "{{ file.uri }}" -c copy -absf aac_adtstoasc {{ file.filename }}.mp4</textarea>
+        </div>
+
+        <p class="right" ng-show="loading">
+          <img src="http://media.giphy.com/media/dIw6T67vqxfCo/giphy.gif" alt="">
+        </p>
+
+        <ul>
+          <li ng-repeat="result in results">
+            <a href="" ng-click="loadProgramsFor(result)">{{ result.Title }}</a>
+            <ul ng-show="result.programs">
+              <li ng-repeat="program in result.programs">
+                <a href="{{ program.Uri }}" ng-show="program.video" ng-click="getPlaylistFor(program, $event)">{{ program.Title }}</a>
+                <span ng-hide="program.video">{{ program.Title }}</span>
+              </li>
+            </ul>
+          </li>
+        </ul>
+
+        <br>
+        <br>
+
+        <hr>
+
+        <br>
+        <br>
+
+        <h4>WUT? I don't even?</h4>
+        <h5>You have a Mac:</h5>
+        <ul>
+          <li>Get <a href="http://brew.sh">homebrew</a></li>
+            <li><pre>$ brew install ffmpeg</pre></li>
+        </ul>
 
         <br>
         <br>
@@ -41,7 +80,6 @@
     </div>
     <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular-route.min.js"></script>
     <script src="/application.js"></script>
   </body>
 </html>
