Add deploy script, fix globals

--- a/index.html
+++ b/index.html
@@ -2,14 +2,11 @@
 <html>
   <head>
     <meta charset='utf-8'>
-    <title>hothothot</title>
+    <title>DLDR</title>
   </head>
   <body>
     <div id='root'></div>
     <script src="https://cdn.rawgit.com/es-shims/es5-shim/master/es5-shim.min.js"></script>
-    <!-- Development: -->
-    <script src="client/bundle.js"></script>
-    <!-- Production: -->
-    <!-- <script src="build/bundle.js"></script> -->
+    <script src="bundle.js"></script>
   </body>
 </html>
