--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   </head>
   <body>
     <div id='root'></div>
-    <script src="https://cdn.rawgit.com/es-shims/es5-shim/master/es5-shim.min.js"></script>
+    <script src='https://cdn.rawgit.com/es-shims/es5-shim/master/es5-shim.min.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/fetch/0.9.0/fetch.min.js'></script>
     <script src="bundle.js"></script>
   </body>
 </html>
